@@ -64,6 +64,7 @@ Bug fixes
  * No longer expose the ``.delete()`` method on the default Page.objects manager (Nick Smith)
  * ``exclude_fields_in_copy`` on Page models will now work for for modelcluster parental / many to many relations (LB (Ben Johnston))
  * Response header (content disposition) now correctly handles filenames with non-ascii characters when using a storage backend (Rich Brennan)
+ * Improved accessibility fixes for ``main``, ``header`` and ``footer`` elements in the admin page layout (Mitchel Cabuloy)
 
 
 Upgrade considerations
