@@ -11,7 +11,7 @@
 
 
 {% block furniture %}
-    <div class="page404__bg">
+    <main class="page404__bg">
         <div class="page404__wrapper">
             {% block branding_logo %}
                 {% include "wagtailadmin/shared/animated_logo.html" %}
@@ -29,5 +29,5 @@
                 <a class="page404__button button" href="{% url 'wagtailadmin_home' %}">{% trans "Go to Wagtail admin" %}</a>
             </div>
         </div>
-    </div>
+    </main>
 {% endblock %}
