@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <header class="merged nice-padding" role="banner">
+    <header class="merged nice-padding">
         <div class="row row-flush">
             <div class="col1">
                 <div class="avatar"><img src="{% avatar_url user %}" alt="" /></div>
